--- a/src/components/head.html
+++ b/src/components/head.html
@@ -1,5 +1,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Title</title>
+<title>{{ title }}</title>
+<meta name="description" content="{{ description }}">
 <!-- Global Style Bundle -->
 <include src="/assets/scss/style.scss"></include>
