feat: enhance documentation and add SCSS utility layer
- Updated README.md with metadata, FLOCSS arch, and asset handling rules.\n- Added SCSS utility files (display, space, text) in src/assets/scss/utility/.\n- Registered utilities in style.scss.\n- Added sample static image and updated news detail page.

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 *,
 *::before,
 *::after {
@@ -307,4 +308,271 @@ a:hover {
 }
 .l-header__nav ul li a:hover::after {
   width: 100%;
+}
+
+/* PC/SP 表示切り替え */
+.u-hidden-sp {
+  display: block;
+}
+@media screen and (min-width: 768px) {
+  .u-hidden-sp {
+    display: block;
+  }
+}
+@media screen and (max-width: 767px) {
+  .u-hidden-sp {
+    display: none;
+  }
+}
+
+.u-hidden-pc {
+  display: none;
+}
+@media screen and (max-width: 767px) {
+  .u-hidden-pc {
+    display: block;
+  }
+}
+
+/* 余白調整 (Margin) */
+.u-mt-0 {
+  margin-top: 0px;
+}
+
+.u-mb-0 {
+  margin-bottom: 0px;
+}
+
+.u-ml-0 {
+  margin-left: 0px;
+}
+
+.u-mr-0 {
+  margin-right: 0px;
+}
+
+.u-mt-5 {
+  margin-top: 5px;
+}
+
+.u-mb-5 {
+  margin-bottom: 5px;
+}
+
+.u-ml-5 {
+  margin-left: 5px;
+}
+
+.u-mr-5 {
+  margin-right: 5px;
+}
+
+.u-mt-10 {
+  margin-top: 10px;
+}
+
+.u-mb-10 {
+  margin-bottom: 10px;
+}
+
+.u-ml-10 {
+  margin-left: 10px;
+}
+
+.u-mr-10 {
+  margin-right: 10px;
+}
+
+.u-mt-15 {
+  margin-top: 15px;
+}
+
+.u-mb-15 {
+  margin-bottom: 15px;
+}
+
+.u-ml-15 {
+  margin-left: 15px;
+}
+
+.u-mr-15 {
+  margin-right: 15px;
+}
+
+.u-mt-20 {
+  margin-top: 20px;
+}
+
+.u-mb-20 {
+  margin-bottom: 20px;
+}
+
+.u-ml-20 {
+  margin-left: 20px;
+}
+
+.u-mr-20 {
+  margin-right: 20px;
+}
+
+.u-mt-25 {
+  margin-top: 25px;
+}
+
+.u-mb-25 {
+  margin-bottom: 25px;
+}
+
+.u-ml-25 {
+  margin-left: 25px;
+}
+
+.u-mr-25 {
+  margin-right: 25px;
+}
+
+.u-mt-30 {
+  margin-top: 30px;
+}
+
+.u-mb-30 {
+  margin-bottom: 30px;
+}
+
+.u-ml-30 {
+  margin-left: 30px;
+}
+
+.u-mr-30 {
+  margin-right: 30px;
+}
+
+.u-mt-40 {
+  margin-top: 40px;
+}
+
+.u-mb-40 {
+  margin-bottom: 40px;
+}
+
+.u-ml-40 {
+  margin-left: 40px;
+}
+
+.u-mr-40 {
+  margin-right: 40px;
+}
+
+.u-mt-50 {
+  margin-top: 50px;
+}
+
+.u-mb-50 {
+  margin-bottom: 50px;
+}
+
+.u-ml-50 {
+  margin-left: 50px;
+}
+
+.u-mr-50 {
+  margin-right: 50px;
+}
+
+.u-mt-60 {
+  margin-top: 60px;
+}
+
+.u-mb-60 {
+  margin-bottom: 60px;
+}
+
+.u-ml-60 {
+  margin-left: 60px;
+}
+
+.u-mr-60 {
+  margin-right: 60px;
+}
+
+.u-mt-70 {
+  margin-top: 70px;
+}
+
+.u-mb-70 {
+  margin-bottom: 70px;
+}
+
+.u-ml-70 {
+  margin-left: 70px;
+}
+
+.u-mr-70 {
+  margin-right: 70px;
+}
+
+.u-mt-80 {
+  margin-top: 80px;
+}
+
+.u-mb-80 {
+  margin-bottom: 80px;
+}
+
+.u-ml-80 {
+  margin-left: 80px;
+}
+
+.u-mr-80 {
+  margin-right: 80px;
+}
+
+.u-mt-90 {
+  margin-top: 90px;
+}
+
+.u-mb-90 {
+  margin-bottom: 90px;
+}
+
+.u-ml-90 {
+  margin-left: 90px;
+}
+
+.u-mr-90 {
+  margin-right: 90px;
+}
+
+.u-mt-100 {
+  margin-top: 100px;
+}
+
+.u-mb-100 {
+  margin-bottom: 100px;
+}
+
+.u-ml-100 {
+  margin-left: 100px;
+}
+
+.u-mr-100 {
+  margin-right: 100px;
+}
+
+/* テキスト配置 */
+.u-text-center {
+  text-align: center;
+}
+
+.u-text-right {
+  text-align: right;
+}
+
+.u-text-left {
+  text-align: left;
+}
+
+/* 太字 */
+.u-font-bold {
+  font-weight: 700;
 }
