--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -13,3 +13,6 @@
 
 // 4. Components (共通コンポーネント: assets/scss/components配下)
 @import "components/**/*.scss";
+
+// 5. Utility (ユーティリティクラス)
+@import "utility/**/*.scss";
